Minor changes. Attempted to fix scrollbar height on small view..

--- a/app/styles/navigator.less
+++ b/app/styles/navigator.less
@@ -598,6 +598,11 @@ zoom: 1;*/
     #coverWindowButton{
         display: none;
     }
+
+    #sideBarWrapper .jspCapBottom{
+        height: 0;
+        display: none;
+     }
 }
 
 @media only screen and (max-width:390px) {
